# amr-ncs-ws

./: demo_install.sh  git_account  instruction_steps
install/: local_setup.sh  setup.sh
install/chart_assets/share/chart_assets/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/chart_launch/share/chart_launch/: common.launch.xml  edit_traffic_world.launch.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh  rmf.rviz  scenario_hardware.launch.xml  simulation.launch.xml
install/chart_maps/share/chart_maps/: chart.building.yaml  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ff_examples_ros1/share/ff_examples_ros1/: package.bash  package.zsh
install/ff_examples_ros2/share/ff_examples_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ff_rviz_plugins_ros1/share/ff_rviz_plugins_ros1/: package.bash  package.zsh
install/fleet_driver_mir/lib/fleet_driver_mir/: fleet_driver_mir  mir_position_converter  remove_mc
install/fleet_driver_mir/share/fleet_driver_mir/: package.bash  package.dsv  (+4 more)
install/john_test/share/john_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/chart/: README.md  mir_fleet_config_cgh_chart.json
src/chart/chart_assets/: CMakeLists.txt  package.xml
src/chart/chart_launch/: CMakeLists.txt
src/chart/chart_maps/: CMakeLists.txt
src/john_test/: setup.cfg  setup.py
src/john_test/john_test/: map_coversion.py  sub_rmf_msg.py
(+36 files in other folders)
